--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
 
 <!-- well met. now it's time to stop stalking. -->
 
-<video width="640" height="360" controls style="border:1px solid #999;">
-  <source src="video.mp4" type="video/mp4">
-  your browser sucks or something lol. can't play the video.
+<video controls width="640" height="360" style="border:1px solid #999;">
+  <source src="tuff.mov" type="video/quicktime">
+  this is supposed to be an interesting video. ur browser is buns.
 </video>
 
 </body>
