--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <!-- well met. now it's time to stop stalking. -->
 
 <video controls width="640" height="360" style="border:1px solid #999;">
-  <source src="tuff.mov" type="video/quicktime">
+  <source src="tuff.mp4" type="video/mp4">
   this is supposed to be an interesting video. ur browser is buns.
 </video>
 
