--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 
 <!-- well met. now it's time to stop stalking. -->
 
-<video controls width="640" height="360" style="border:1px solid #999;">
+<video controls width="800" height="450">
   <source src="tuff.mp4" type="video/mp4">
 </video>
 
